Updated first post

--- a/4-reasons-why-you-should-opt-for-cosmetic-surgery-loans/page.mdx
+++ b/4-reasons-why-you-should-opt-for-cosmetic-surgery-loans/page.mdx
@@ -8,7 +8,7 @@ export const article = {
   description: 'description',
   publishedOn: '2021-04-09T13:28:20-0400',
   image: postImage,
-  category: 'medical',
+  category: 'Medical Loan',
   author: users.tim,
 }
 
@@ -19,17 +19,9 @@ export const metadata = {
 
 export default (props) => <BlogPost post={article} {...props} />
 
-<Image src={postImage} alt={article.title} />
-
----
-category: "MEDICAL LOAN"
----
-
-# 4 Reasons Why You Should Opt For Cosmetic Surgery Loans
-
-## 4 Reasons Why You Should Opt For Cosmetic Surgery Loans
-
 The one thing keeping us all at bay from cosmetic procedures is that most of us cannot afford these expensive treatments. Even the ones labeled as ‘cheap’ aren’t really inexpensive, and nobody wants to take a risk when going for such a procedure. If at all you are planning to go under the knife, never settle for less. It is highly recommended that you reach out to certified plastic surgeons, who are experts in their fields and know what has to be done and what not. Cosmetic Surgery Loans are a big relief when talking about such procedures.
+
+<Image src={postImage} alt={article.title} />
 
 If you think that signing up for a loan or financial help for a beauty procedure isn’t worth, here are four reasons to tell you that it entirely is. Everyone deserves to look beautiful, and if you have to pay the price for it, then why not do it the easier way.
 
