Plastic-Surgery-loan-1.jpg~

--- a/13-unforgivable-cardiology-surgery-loan-mistakes/page.mdx
+++ b/13-unforgivable-cardiology-surgery-loan-mistakes/page.mdx
@@ -1,14 +1,15 @@
 import Image from 'next/image'
-import postImage from './postImage.jpg'
+import postImage from './Cardiology-Surgery-Loan.jpg'
 import BlogPost from '@/components/BlogPost'
 import {users} from '@/utils/constant'
 
 export const article = {
-  title: '13 unforgivable cardiology surgery loan mistakes',
-  description: 'description',
+  title: '13 Unforgivable Cardiology Surgery Loan Mistakes Everyone Makes',
+  description: 'In the realm of securing funding for your cardiology surgery, astute decision-making can delineate the contrast between a seamless journey and a fiscal ordeal. Cardiology surgery loans present a commendable avenue to defray the expenses incurred during these indispensable medical interventions. However, there exist common blunders that countless individuals commit when navigating the application process.
+',
   publishedOn: '2021-08-11T13:28:20-0400',
   image: postImage,
-  category: 'medical',
+  category: 'cardiology surgery loan',
   author: users.tim,
 }
 
@@ -19,15 +20,9 @@ export const metadata = {
 
 export default (props) => <BlogPost post={article} {...props} />
 
-<Image src={postImage} alt={article.title} />
-
----
-category: "CARDIOLOGY SURGERY LOAN"
----
-
-# 13 Unforgivable Cardiology Surgery Loan Mistakes Everyone Makes
-
 In the realm of securing funding for your cardiology surgery, astute decision-making can delineate the contrast between a seamless journey and a fiscal ordeal. Cardiology surgery loans present a commendable avenue to defray the expenses incurred during these indispensable medical interventions. However, there exist common blunders that countless individuals commit when navigating the application process.
+
+<Image src={postImage} alt={article.title} />
 
 ## 13 inexcusable missteps in the realm of Cardiology Surgery Loan
 
