--- a/affordable-coronary-care-surgery-loans-get-financing/page.mdx
+++ b/affordable-coronary-care-surgery-loans-get-financing/page.mdx
@@ -1,14 +1,15 @@
 import Image from 'next/image'
-import postImage from './postImage.jpg'
+import postImage from './Affordable-Coronary-Care-Surgery-Loans.jpg'
 import BlogPost from '@/components/BlogPost'
 import {users} from '@/utils/constant'
 
 export const article = {
-  title: 'affordable coronary care surgery loans get financing',
-  description: 'description',
+  title: 'Affordable Coronary Care Surgery Loans | Get Financing Now',
+  description: 'Coronary care surgery is a necessary medical procedure that can save lives, but it can also be expensive. The cost of this procedure can put a significant financial burden on individuals and families. Fortunately, there are financing options available that can help make this life-saving surgery more affordable. In this article, we will discuss everything you need to know about affordable coronary care surgery loans and how you can get financing now.
+',
   publishedOn: '2022-01-05T13:28:20-0400',
   image: postImage,
-  category: 'medical',
+  category: 'coronary care surgery',
   author: users.tim,
 }
 
@@ -19,15 +20,9 @@ export const metadata = {
 
 export default (props) => <BlogPost post={article} {...props} />
 
-<Image src={postImage} alt={article.title} />
-
----
-category: "CORONARY CARE SURGERY"
----
-
-# ## Affordable Coronary Care Surgery Loans | Get Financing Now
-
 Coronary care surgery is a necessary medical procedure that can save lives, but it can also be expensive. The cost of this procedure can put a significant financial burden on individuals and families. Fortunately, there are financing options available that can help make this life-saving surgery more affordable. In this article, we will discuss everything you need to know about affordable coronary care surgery loans and how you can get financing now.
+
+<Image src={postImage} alt={article.title} />
 
 ## What are Affordable Coronary Care Surgery Loans?
 
