Fixed blog posts

--- a/13-unforgivable-cardiology-surgery-loan-mistakes/page.mdx
+++ b/13-unforgivable-cardiology-surgery-loan-mistakes/page.mdx
@@ -5,8 +5,7 @@ import {users} from '@/utils/constant'
 
 export const article = {
   title: '13 Unforgivable Cardiology Surgery Loan Mistakes Everyone Makes',
-  description: 'In the realm of securing funding for your cardiology surgery, astute decision-making can delineate the contrast between a seamless journey and a fiscal ordeal. Cardiology surgery loans present a commendable avenue to defray the expenses incurred during these indispensable medical interventions. However, there exist common blunders that countless individuals commit when navigating the application process.
-',
+  description: 'In the realm of securing funding for your cardiology surgery, astute decision-making can delineate the contrast between a seamless journey and a fiscal ordeal. Cardiology surgery loans present a commendable avenue to defray the expenses incurred during these indispensable medical interventions. However, there exist common blunders that countless individuals commit when navigating the application process.',
   publishedOn: '2021-08-11T13:28:20-0400',
   image: postImage,
   category: 'cardiology surgery loan',
