--- a/affordable-coronary-care-surgery-loans-get-financing/page.mdx
+++ b/affordable-coronary-care-surgery-loans-get-financing/page.mdx
@@ -1,12 +1,11 @@
 import Image from 'next/image'
 import postImage from './Affordable-Coronary-Care-Surgery-Loans.jpg'
 import BlogPost from '@/components/BlogPost'
-import {users} from '@/utils/constant'
+import { users } from '@/utils/constant'
 
 export const article = {
   title: 'Affordable Coronary Care Surgery Loans | Get Financing Now',
-  description: 'Coronary care surgery is a necessary medical procedure that can save lives, but it can also be expensive. The cost of this procedure can put a significant financial burden on individuals and families. Fortunately, there are financing options available that can help make this life-saving surgery more affordable. In this article, we will discuss everything you need to know about affordable coronary care surgery loans and how you can get financing now.
-',
+  description: 'Coronary care surgery is a necessary medical procedure that can save lives, but it can also be expensive. The cost of this procedure can put a significant financial burden on individuals and families. Fortunately, there are financing options available that can help make this life-saving surgery more affordable. In this article, we will discuss everything you need to know about affordable coronary care surgery loans and how you can get financing now.',
   publishedOn: '2022-01-05T13:28:20-0400',
   image: postImage,
   category: 'coronary care surgery',
