--- a/breast-fat-transfer-increasing-breast-size-with-your-own-fat/page.mdx
+++ b/breast-fat-transfer-increasing-breast-size-with-your-own-fat/page.mdx
@@ -1,5 +1,5 @@
 import Image from "next/image";
-import postImage from "./pBreast-Fat-Transfer.jpg";
+import postImage from "./Breast-Fat-Transfer.jpg";
 import BlogPost from "@/components/BlogPost";
 import { users } from "@/utils/constant";
 
