--- a/engagement-ring/page.mdx
+++ b/engagement-ring/page.mdx
@@ -1,5 +1,5 @@
 import Image from "next/image";
-import postImage from "./postImage.jpg";
+import postImage from "./engagement-ring.avif";
 import BlogPost from "@/components/BlogPost";
 import { users } from "@/utils/constant";
 
