--- a/get-a-gynaecology-loan-to-treat-gynaecological-issues/page.mdx
+++ b/get-a-gynaecology-loan-to-treat-gynaecological-issues/page.mdx
@@ -5,8 +5,7 @@ import {users} from '@/utils/constant'
 
 export const article = {
   title: 'get a gynaecology loan to treat gynaecological issues',
-  description: 'Gynaecologists – we usually hear this word many times. They are the doctors who are specialized in women’s health with the main focus on the female reproductive system. These professionals usually deal with a wide range of issues which include pregnancy and childbirth, obstetrics, menstruation, hormonal imbalance, fertility issues and many more.
-',
+  description: 'Gynaecologists – we usually hear this word many times. They are the doctors who are specialized in women’s health with the main focus on the female reproductive system. These professionals usually deal with a wide range of issues which include pregnancy and childbirth, obstetrics, menstruation, hormonal imbalance, fertility issues and many more.',
   publishedOn: '2020-11-07T13:28:20-0400',
   image: postImage,
   category: 'gastroenterology loans',
