--- a/rhinoplasty-recovery-dr-george-marcell/page.mdx
+++ b/rhinoplasty-recovery-dr-george-marcell/page.mdx
@@ -1,5 +1,6 @@
 import Image from 'next/image'
-import postImage from './Rhinoplasty-Recovery.jpg
+import postImage from './Rhinoplasty-Recovery.jpg'
+import roboticHair from './Robotic-Hair-Transplants.jpg'
 import BlogPost from '@/components/BlogPost'
 import {users} from '@/utils/constant'
 
@@ -27,8 +28,8 @@ Rhinoplasty is still one of the most popular plastic surgery procedures, and wil
 
 So, what’s involved in a rhinoplasty recovery? Rhinoplasty can be done as a Day Only procedure or if you would prefer, an overnight stay. It is generally agreed that you should arrange to have at least two weeks off work, perhaps more if possible. Some of the reasons for this include:
 
-**• Bruising –** Usually disappears after 10 days  
-**• Swelling –** puffy eyes, face and nose for at least a few days. It is estimated to be around 10 – 14 days before most of the swelling and bruising disappears.  
+**• Bruising –** Usually disappears after 10 days
+**• Swelling –** puffy eyes, face and nose for at least a few days. It is estimated to be around 10 – 14 days before most of the swelling and bruising disappears.
 **• You need to minimise movement for a few days –** it is suggested not to return to any strenuous activities for several weeks after your nose job so depending on what job you do you need to take this into consideration.
 
 After surgery, you should expect your nose to feel congested as though you have a cold or the flu. You will probably have a nose splint or cast on your nose to hold it in place and protect it while it heals. Dr Marcells says occasionally you might have internal splints inside the nose as well. He says ‘These should remain in place for at least a week until your nose has stabilised. I always inform my patients about any casts and splints I will use in the procedure at the initial consultation’.
@@ -37,14 +38,14 @@ It is advised you should rest as much as possible after the surgery. Keep any mo
 
 Dr Marcells also gives us some other hints with regards to the recovery:
 
-• Keep your external splint dry. You can shower, but the water can’t be too hot.  
-• If you wear glasses they should not rest on the bridge of your nose.  
-• Keep your head up as much as possible. It’s better to sit up, not lie down.  
-• Sleep with a couple of pillows to prop you up. Don’t lie flat.  
-• Try not to blow your nose during the first week. Gently dab. After any splints and cast is removed you can gently blow your nose again. Definitely don’t wiggle the nose from side to side like we often do when we blow our noses.  
-• Try to open your mouth if you sneeze so there’s not too much pressure inside your nose!  
-• Ice packs and cold compresses help reduce swelling and bruising around the eyes.  
-• Have clothes that button in the front ready for the few days after surgery so you don’t have to pull t-shirts, etc. over your head.  
+• Keep your external splint dry. You can shower, but the water can’t be too hot.
+• If you wear glasses they should not rest on the bridge of your nose.
+• Keep your head up as much as possible. It’s better to sit up, not lie down.
+• Sleep with a couple of pillows to prop you up. Don’t lie flat.
+• Try not to blow your nose during the first week. Gently dab. After any splints and cast is removed you can gently blow your nose again. Definitely don’t wiggle the nose from side to side like we often do when we blow our noses.
+• Try to open your mouth if you sneeze so there’s not too much pressure inside your nose!
+• Ice packs and cold compresses help reduce swelling and bruising around the eyes.
+• Have clothes that button in the front ready for the few days after surgery so you don’t have to pull t-shirts, etc. over your head.
 • If you have young children, try to ensure they don’t knock your nose. Having help from friends or family might be advisable, or explaining to the kids that you need a bit of space for a few days might work too! (Depending on how old or how excitable they are!)
 
 Dr Marcells also advises us that it’s normal to have some bleeding or mucus draining from the nose after the surgery. This often happens for a few days after the surgery. If you feel like it’s excessive or you’re worried about it, or it doesn’t stop after about a week, check back with your surgeon.
@@ -53,6 +54,8 @@ Rhinoplasty or nose jobs can completely change the appearance of the patient’s
 
 If you’d like to arrange a consultation or have any questions, you can phone Dr Marcells and his team on 1300 555 095.
 
-\*This blog is written by Trish Hammond, founder of Plastic Surgery Hub with the help of information from Dr George Marcells. We have very gratefully reposted her work to inform and educate our customers. You can find more of Trish’s wonderful articles at www.plasticsurgeryhub.com.au
+<Image src={roboticHair} alt={article.title} />
+
+*This blog is written by Trish Hammond, founder of Plastic Surgery Hub with the help of information from Dr George Marcells. We have very gratefully reposted her work to inform and educate our customers. You can find more of Trish’s wonderful articles at www.plasticsurgeryhub.com.au
 
 Trish is a plastic surgery blogger. She is passionate about wellbeing, health and beauty, and doesn’t mind a little bit of ‘help’ from the amazing cosmetic and beauty procedures that are available today. Trish spends her days talking to women and men who are looking for suggestions and advice on procedures that are available to them. Cutting through the sales pitch and hype, a down-to-earth response on general information is what you will get.
