--- a/avail-for-dental-surgery-loan/page.mdx
+++ b/avail-for-dental-surgery-loan/page.mdx
@@ -5,8 +5,7 @@ import {users} from '@/utils/constant'
 
 export const article = {
   title: 'Top Reasons On Why Should You Avail For Dental Surgery Loan',
-  description: 'Facing health issues is very common among people. But do you know which health issues trouble your body and mind? It’s dental issues. When people face dental issues they don’t bother to care it since the amount required for the treatment is high. But often we forget that the general requirement of a person is to be healthy in their life. To maintain it you should not leave the oral issues untreated. Then how can you compensate the amount required for dental issues? You can simply apply for the dental surgery loan. Wondering how? Find the overall information in this article.
-',
+  description: 'Facing health issues is very common among people. But do you know which health issues trouble your body and mind? It’s dental issues. When people face dental issues they don’t bother to care it since the amount required for the treatment is high. But often we forget that the general requirement of a person is to be healthy in their life. To maintain it you should not leave the oral issues untreated. Then how can you compensate the amount required for dental issues? You can simply apply for the dental surgery loan. Wondering how? Find the overall information in this article.',
   publishedOn: '2022-04-30T13:28:20-0400',
   image: postImage,
   category: 'dental loan',
