--- a/jewellery/page.mdx
+++ b/jewellery/page.mdx
@@ -1,5 +1,5 @@
 import Image from "next/image";
-import postImage from "./postImage.jpg";
+import postImage from "./jwellery.avif";
 import BlogPost from "@/components/BlogPost";
 import { users } from "@/utils/constant";
 
