--- a/medical/orthopaedic/page.mdx
+++ b/medical/orthopaedic/page.mdx
@@ -1,12 +1,12 @@
-import PersonalLoanPage from "@/components/PersonalLoanPage"
+import PersonalLoanPage from "@/components/PersonalLoanPage";
 
-export const title = "Orthopaedic Surgery Loans"
+export const title = "Orthopaedic Surgery Loans";
 
 export const metadata = {
   title: title,
-}
+};
 
-export default (props) => <PersonalLoanPage title={title} {...props} />
+export default (props) => <PersonalLoanPage title={title} {...props} />;
 
 Orthopaedics, or orthopaedic surgery, is a medical speciality that is concerned with the injuries and diseases relating to your body’s musculoskeletal system. This system is a complex network that includes your bones, ligaments, tendons, joints, nerves and muscles which are responsible for helping you move and be active.
 
